<resources>
    <string name="app_name">Power Calculator</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="action_bluetooth">Bluetooth</string>

    <string name="avg">Average Power</string>
    <string name="peak">Peak Power</string>
    <string name="high">Highest</string>

    <string name="unit">Units in\u0020</string>
    <string name="watt">watt</string>
    <string name="hp">horsepower</string>

    <string name="toast_restart">Recording new data</string>
    <string name="toast_receive">New data received</string>

    <string-array name="settings_content">
        <item>Units in horsepower</item>
        <item>Debugging messages</item>
    </string-array>

    <string name="about_content">
        Power Calculator\n
        \nDevelopers:\n
        \tDafa Faris M.\n
        \tFadhil Sibarani\n
        \tM. Salman Galileo</string>

    <string name="debug">Debugging Messages</string>
    <string name="debug_content_1">Bluetooth receive:\n\u0020</string>
    <string name="debug_content_2">Bluetooth valid data:\n\u0020</string>
    <string name="debug_content_3">Bluetooth connected:\n\u0020</string>

    <string name="bt_info">Select btSerial device from paired devices:</string>
    <string name="bt_connect">Connecting...</string>
    <string name="bt_warning">If no devices are listed please pair your device in Android settings</string>
    <string name="bt_connect_fail">Connection failure</string>
    <string name="bt_socket_fail">Socket creation failed</string>
    <string name="bt_none_paired">Paired device doesn\'t exist</string>
    <string name="bt_none">Device does not support Bluetooth</string>

</resources>
