<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.joincollabws.powercalculator.MainActivity"
    >

    <!-- "Bluetooth", should appear as action button if possible -->
    <item
        android:id="@+id/action_bluetooth"
        android:icon="@android:drawable/stat_sys_data_bluetooth"
        android:orderInCategory="100"
        android:title="@string/action_bluetooth"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_about"
        android:orderInCategory="100"
        android:title="@string/action_about"
        app:showAsAction="never" />
</menu>
